@@ -1496,6 +1496,16 @@ PreReq: python >= %{python_version}, python < %{maxver}
 %__pkgconfig_requires	%{_rpmhome}/pkgconfigdeps.sh --requires
 
 #------------------------------------------------------------------------
+# mono(...) configuration.
+#
+# Path to scripts to autogenerate mono package dependencies,
+#
+# Note: Used iff _use_internal_dependency_generator is non-zero. The
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+%__mono_provides	%{_rpmhome}/mono-find-provides
+%__mono_requires	%{_rpmhome}/mono-find-requires
+
+#------------------------------------------------------------------------
 # executable(...) configuration.
 #
 # Path to scripts to autogenerate executable(foo) script dependencies,
