@@ -13,7 +13,9 @@ EXTRA_DIST = \
 	cpanflute cpanflute2 Specfile.pm find-provides.perl \
 	find-requires.perl freshen.sh gendiff getpo.sh http.req \
 	check-java-closure.sh java.prov.sh java.req.sh \
-	javadeps.sh libtooldeps.sh pkgconfigdeps.sh \
+	javadeps.sh libtooldeps.sh \
+	mono-find-provides mono-find-requires \
+	pkgconfigdeps.sh \
 	perldeps.pl perl.prov perl.req pythondeps.sh \
 	php.prov php.req rpm2cpio \
 	rpmdb_loadcvt rpmdiff rpmdiff.cgi \
@@ -38,7 +40,9 @@ versionlib_SCRIPTS = \
 	find-debuginfo.sh find-lang.sh find-prov.pl find-req.pl \
 	find-provides.perl \
 	find-requires.perl getpo.sh http.req \
-	javadeps.sh libtooldeps.sh pkgconfigdeps.sh \
+	javadeps.sh libtooldeps.sh \
+	mono-find-provides mono-find-requires \
+	pkgconfigdeps.sh \
 	perldeps.pl perl.prov perl.req pythondeps.sh \
 	php.prov php.req \
 	rpmdb_loadcvt \
