@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: add mono automagic dependency extractors.
     - jbj: insure that RPMFILE_EXISTS is set for %config files.
     - jbj: revert the _GetPass() hack-a-round.
     - jbj: set a default 0022 umask value always (#83006).
